--- a/client/css/services.css
+++ b/client/css/services.css
@@ -186,7 +186,7 @@ background: #ffffff url(images/gradient-top2.png) repeat-x center top;
   width: 100% !important;
   height: 100% !important;
 }
-@media screen and (min-width: 601px) {
+@media screen and (min-width: 768px) {
 .pad80l {
     padding-left: 80px !important;
     /* padding-left: 5rem !important; */
@@ -198,6 +198,7 @@ background: #ffffff url(images/gradient-top2.png) repeat-x center top;
 .padEdgeR {
     padding-right: calc(((100vw - 1210px) / 2) + 32px) !important;
     /* padding-right: calc(((100vw - 1210px) / 2) + 2rem) !important; */
+    padding: none !important
 }
 }
 .nav-link {
@@ -220,7 +221,7 @@ a.tab {
 
 
 @media screen and (max-width:768px) {
-	.no-mobile, .slides-pagination, .vert--33, .vert--66 {
+	.no-mobile, .slides-pagination, .vert--33, .vert--66  {
 		display:none !important;
   }
 
